--- a/BreaksAPU/APUPlayer/App.config
+++ b/BreaksAPU/APUPlayer/App.config
@@ -2,14 +2,14 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="NSFPlayer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="APUPlayer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
-        <NSFPlayer.Properties.Settings>
+        <APUPlayer.Properties.Settings>
             <setting name="APUPlayerSettings" serializeAs="String">
                 <value />
             </setting>
-        </NSFPlayer.Properties.Settings>
+        </APUPlayer.Properties.Settings>
     </userSettings>
 </configuration>
